Updated cookie handling.